# composable-associations

./: .travis.yml  README.md  stack.yaml
composable-associations/: README.md  composable-associations.cabal  stack.yaml
composable-associations-aeson/: README.md  composable-associations-aeson.cabal  stack.yaml
composable-associations-aeson/doctest/: Main.hs
composable-associations-aeson/src/Data/ComposableAssociation/: Aeson.hs
composable-associations-aeson/test/: Main.hs
composable-associations/src/Data/: ComposableAssociation.hs
composable-associations/test/: Main.hs
